fr translation php ok

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,4 +1,144 @@
 {
+    "========= PASDT =========": "========= PASDT =========",
+
+    "Administrator configuration": "Configuration administrateur",
+    "Back to Home": "Retour à l'accueil",
+    "Connection restored": "Connexion rétablie",
+    "Sign out": "Se déconnecter",
+    "Log monitoring": "Suivi de logs",
+    "Manage my fleet": "Gérer mon parc",
+    "New access": "Nouvel accès",
+    "New notifications": "Nouvelles notifications",
+    "Reconnect": "Se reconnecter",
+    "Unread notifications": "Notifications non lues",
+    "The latest data received is displayed. Click this link to refresh the data.": "Les dernières données reçues sont affichées. Cliquez sur ce lien pour rafraîchir les données.",
+    "You are taking control of another company. Click here to return to yours": "Vous prenez le contrôle d'une autre entreprise. Cliquez ici pour revenir à la vôtre",
+    "You are </span>disconnected</small>": "Vous êtes </span>déconnecté</small>",
+
+    "========= Monitoring =========": "========= Monitoring =========",
+
+    "Battery": "Batterie",
+    "Color code": "Code couleurs",
+    "Battery color code": "Code couleurs de la battery",
+    "Dark blue": "Bleu sombre",
+    "Date": "Date",
+    "Default": "Défaut",
+    "Details": "Détails",
+    "Empty the calendar": "Vider le calendrier",
+    "Last anomaly": "Dernière anomalie",
+    "Last anomaly date": "Date de dernière anomalie",
+    "Last refresh": "Dernière actualisation",
+    "Last temp.": "Dernière temp.",
+    "Last temp. date": "Date de dernière temp.",
+    "Log analysis": "Analyse de logs",
+    "Logs": "Logs",
+    "Logs color code": "Code couleurs des logs",
+    "Gas fault": "Défaut gaz",
+    "Message":"Message",
+    "max. battery": "batterie max.",
+    "min. temperature": "température min.",
+    "Only anomalies": "Uniquement les anomalies",
+    "Only temperatures": "Uniquement les températures",
+    "Other": "Autre",
+    "Pressure fault": "Défaut de pression",
+    "Search by": "Rechercher par",
+    "Search by date": "Rechercher par date",
+    "Summary of anomalies": "Synthèse anomalies",
+    "than": "que",
+    "Temperature color code": "Code couleurs de la température",
+    "Temperature fault": "Défaut Température",
+    "Temperature graphs": "Graphes de température",
+    "Temperature": "Température",
+    "Theme": "Thème",
+    "This table is refreshed every 5 minutes.": "Ce tableau est actualisé toutes les 5 minutes.",
+
+    "========= Client =========": "========= Client =========",
+
+    "1<sup>st</sup> occurence": "1<sup>ère</sup> occurence",
+    "Actions": "Actions",
+    "Active": "Actif",
+    "Actual logo": "Actual logo",
+    "Activate mails": "Activer les mails",
+    "Activate notifications (keep this tab open)": "Activer les notifications (gardez cet onglet ouvert)",
+    "Add a subscription": "Ajouter un abonnement",
+    "Change the logo of": "Changer le logo de",
+    "Comment": "Commentaire",
+    "Comment on the alert": "Commentaire sur l'alerte",
+    "Created the": "Créé le",
+    "Current colors": "Couleurs actuelles",
+    "Durée": "Duration",
+    "Edit the comment": "&Eacute;diter le commentaire",
+    "Edit the account": "Editer le compte",
+    "Failed to post your comment.": "L'envoi du commentaire n'a pas fonctionné.",
+    "Finished": "Fini le",
+    "First occurence the": "Première occurence le",
+    "ID": "Identifiant",
+    "invoice": "Facture",
+    "Last alerts": "Dernières alertes",
+    "List of users of your group": "Liste des utilisateurs de votre groupe",
+    "List of modules of your group": "Liste des modules de votre groupe",
+    "Modified the": "Modifi&eacute; le",
+    "Modify": "Modifier",
+    "Modify the colors": "Modifier les couleurs",
+    "Number": "Num&eacute;ro",
+    "Module":"Module",
+    "Notification buttons": "boutons notifications",
+    "Occurences": "Occurences",
+    "Ongoing since the": "En cours depuis le",
+    "Refresh the page or contact the administrator.": "Actualisez la page ou contactez l'administrateur.",
+    "Revoke": "R&eacute;voquer",
+    "See the related alerts": "Voir les alertes associées",
+    "See the generated email": "Voir le mail généré",
+    "Seen": "Vu",
+    "Send the comment": "Enregistrer le commentaire",
+    "Solved since the": "Résolu depuis le",
+    "State": "&Eacute;tat",
+    "Subscription": "Abonnement",
+    "There has been some problem with your image.": "Il y a eu un problème avec votre image.",
+    "There have been some problems with your colors.": "Il y a eu un problème avec vos couleurs.",
+    "To add monitoring for a module, contact our team.": "Pour ajouter la surveillance d'un module, contactez notre équipe.",
+    "Type": "Type",
+    "Update the logo": "Mettre à jour le logo",
+    "You must first autorise browser notifications.": "Vous devez d'abord autoriser les notifications de votre navigateur.",
+    "Your account is badly configured, contact the administrator.": "Votre compte est mal configuré, contactez l'administrateur.",
+    "Your subscription": "Votre abonnement",
+    "Value": "Valeur",
+
+    "========= Admin =========": "========= Admin =========",
+
+    "Active modules": "Modules actifs",
+    "Add, see modules": "Ajouter, voir des modules",
+    "Add a module": "Ajouter un module",
+    "Add the module": "Ajouter le module",
+    "Back to general analysis": "Retour à l'analyse générale",
+    "Clicking on a name in the table allows you to see the company's logs. Clicking on a logo or a color allows you to modify its values.": "Cliquer sur un nom du tableau permet de voir les logs de l'entreprise. Cliquer sur un logo ou une couleur permet de modifier ses valeurs.",
+    "Color": "Couleur",
+    "Deletion": "Suppression",
+    "First check if the module does not exist on the top list or if it is affiliated with another company. <br> The module will be added to the top list.": "Recherchez d'abord si le module n'existe pas sur la liste du dessus ou s'il est affilié à une autre entreprise.<br>Le module sera ajouté à liste du dessus.",
+    "Link a module": "Lier un module",
+    "Link the module": "Lier le module",
+    "Link a module not yet assigned to any company": "Lier un module encore assigné à aucune entreprise",
+    "List of companies": "Liste des entreprises",
+    "Logo": "Logo",
+    "Modify a module": "Modifier un module",
+    "Modify the module": "Modifier le module",
+    "Modify the logo": "Modifier le logo",
+    "Modify the colors": "Modifier les couleurs",
+    "Module ID": "Identifiant du module",
+    "Module list": "Liste des modules",
+    "Module name": "Nom du module",
+    "Raw Telit JSON data": "Données JSON brutes Telit",
+    "See": "Voir",
+    "See the logs": "Voir les logs",
+    "Show on the map": "Afficher sur la carte",
+    "Telit number": "Numéro Telit",
+    "Telit module": "Module Telit",
+    "These data are accessible in the Telit portal.<br>Connections -> eye icon on the left -> 'Actions' on the top right -> View JSON.": "Ces données sont accessibles dans le portail Telit.<br>Connections -> icone œil à gauche -> 'Actions' en haut à droite -> View JSON.",
+    "User list": "Liste d'utilisateurs",
+    "Users": "Utilisateurs",
+
+    "========= Generic =========": "========= Generic =========",
+
     "A fresh verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse email.",
     "A new verification link has been sent to the email address you provided during registration.": "Un nouveau lien de vérification a été envoyé à l'adresse email que vous avez indiquée lors de votre inscription.",
     "Add a new team member to your team, allowing them to collaborate with you." : "Ajoutez un nouveau membre de l'équipe à votre équipe, permettant de collaborer avec vous.",
@@ -181,48 +321,5 @@
     "You may delete any of your existing tokens if they are no longer needed." : "Vous pouvez supprimer n'importe lequel de vos jetons existants s'ils ne sont plus nécessaires.",
     "You may not delete your personal team.": "Vous ne pouvez pas supprimer votre équipe personnelle.",
     "You may not leave a team that you created.": "Vous ne pouvez pas quitter une équipe que vous avez créée.",
-    "Your email address is not verified.": "Votre adresse email n'a pas été vérifiée.",
-
-    "============== PASDT ==============": "============== PASDT ==============",
-
-    "1<sup>st</sup> occurence": "1<sup>ère</sup> occurence",
-    "Actions": "Actions",
-    "Active": "Actif",
-    "Actual logo": "Actual logo",
-    "Activate mails": "Activer les mails",
-    "Activate notifications (keep this tab open)": "Activer les notifications (gardez cet onglet ouvert)",
-    "Add a subscription": "Ajouter un abonnement",
-    "Change the logo of": "Changer le logo de",
-    "Comment": "Commentaire",
-    "Comment on the alert": "Commentaire sur l'alerte",
-    "Created the": "Créé le",
-    "Current colors": "Couleurs actuelles",
-    "Durée": "Duration",
-    "Edit the comment": "&Eacute;diter le commentaire",
-    "Edit the account": "Editer le compte",
-    "Failed to post your comment.": "L'envoi du commentaire n'a pas fonctionné.",
-    "Finished": "Fini le",
-    "ID": "Identifiant",
-    "invoice": "Facture",
-    "Last alerts": "Dernières alertes",
-    "List of users of your group": "Liste des utilisateurs de votre groupe",
-    "List of modules of your group": "Liste des modules de votre groupe",
-    "Modified the": "Modifi&eacute; le",
-    "Modify the colors": "Modifier les couleurs",
-    "Number": "Num&eacute;ro",
-    "Module":"Module",
-    "Occurences": "Occurences",
-    "Refresh the page or contact the administrator.": "Actualisez la page ou contactez l'administrateur.",
-    "Send the comment": "Enregistrer le commentaire",
-    "State": "&Eacute;tat",
-    "Subscription": "Abonnement",
-    "There has been some problem with your image.": "Il y a eu un problème avec votre image.",
-    "There have been some problems with your colors.": "Il y a eu un problème avec vos couleurs.",
-    "To add monitoring for a module, contact our team.": "Pour ajouter la surveillance d'un module, contactez notre équipe.",
-    "Type": "Type",
-    "Update the logo": "Mettre à jour le logo",
-    "You must first autorise browser notifications.": "Vous devez d'abord autoriser les notifications de votre navigateur.",
-    "Your account is badly configured, contact the administrator.": "Votre compte est mal configuré, contactez l'administrateur.",
-    "Your subscription": "Votre abonnement",
-    "Value": "Valeur"
+    "Your email address is not verified.": "Votre adresse email n'a pas été vérifiée."
 }
