more translated pages

--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -82,7 +82,7 @@
     "Modify the colors": "Modifier les couleurs",
     "Number": "Num&eacute;ro",
     "Module":"Module",
-    "Notification buttons": "boutons notifications",
+    "Notification buttons": "Boutons notifications",
     "Occurences": "Occurences",
     "Ongoing since the": "En cours depuis le",
     "Refresh the page or contact the administrator.": "Actualisez la page ou contactez l'administrateur.",
@@ -103,6 +103,32 @@
     "Your account is badly configured, contact the administrator.": "Votre compte est mal configuré, contactez l'administrateur.",
     "Your subscription": "Votre abonnement",
     "Value": "Valeur",
+
+
+    "========= Datetime =========": "========= Datetime =========",
+    ":": "h",
+    "at": "à",
+    "days": "jours",
+    "hours": "heures",
+    "minutes": "minutes",
+    "months": "mois",
+    "seconds": "secondes",
+
+    "========= Mail =========": "========= Mail =========",
+    "Best regards": "Bien cordialement",
+    "Consult on": "Consulter sur",
+    "New alert": "Nouvelle alerte",
+    "New critical alert": "Nouvelle alerte critique",
+    "for your module": "pour votre module",
+    "_Module location_": "_Localisation du module_",
+    "The": "Le",
+    "the": "le",
+    "the portal has detected that it has not received data from your module since": "le portail a détécté qu'il n'a plus reçu de données de votre module depuis",
+    "your module triggered the folllowing __CRITICAL__ alert:": "votre module a déclenché l'alerte __CRITIQUE__ suivante:",
+    "your module triggered the folllowing alert:": "votre module a déclenché l'alerte suivante:",
+    "with the value of": "avec la valeur de",
+    "You may need to intervene": "Une action de votre part est sûrement nécessaire.",
+    "You may need to intervene urgently": "Une action urgente de votre part est sûrement nécessaire.",
 
     "========= Admin =========": "========= Admin =========",
 
