language switch ok

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -63,11 +63,13 @@
     "Activate mails": "Activar electrónico",
     "Activate notifications (keep this tab open)": "Activar la notificación (mantener esta pestaña abierta)",
     "Add a subscription": "Añadir una suscripción",
+    "Change the language": "Cambia el idioma",
     "Change the logo of": "Cambiar el logotipo de",
     "Comment": "¿Cómo? 'O' ¿Qué",
     "Comment on the alert": "Como en la alarma",
     "Created the": "Creado té",
     "Current colors": "colores actuales",
+    "during": "durante",
     "Durée": "Duración",
     "Edit the comment": "Editar el comentario",
     "Edit the account": "Editar la cuenta",
@@ -76,7 +78,8 @@
     "First occurence the": "En primer lugar la ocurrencia",
     "ID": "CARNÉ DE IDENTIDAD",
     "invoice": "factura",
-    "Last alerts": "Últimos alertas",
+    "Last alerts": "Últimas alertas",
+    "Last log": "Ultimo registro",
     "List of users of your group": "Lista de usuarios de su grupo",
     "List of modules of your group": "Lista de los módulos de su grupo",
     "Modified the": "té modificado",
@@ -102,7 +105,8 @@
     "Type": "Tipo",
     "Update the logo": "Actualizar el logotipo",
     "You must first autorise browser notifications.": "Primero debe permitir que las notificaciones del navegador .",
-    "Your account is badly configured, contact the administrator.": "Su cuenta está mal configurado, toque el administrador .",
+    "Your account is badly configured, contact the administrator.": "Su cuenta está mal configurado, toque el administrador.",
+    "Your language preferences have correctly been updated": "Tus preferencias de idioma se han actualizado correctamente.",
     "Your subscription": "Su suscripción",
     "Value": "Valor",
 
