datatables language ok

--- a/resources/lang/nn.json
+++ b/resources/lang/nn.json
@@ -127,8 +127,8 @@
     "The": "De",
     "the": "de",
     "the portal has detected that it has not received data from your module since": "portalen har oppdaget at den ikke har mottatt data fra modulen din siden",
-    "your module triggered the folllowing __CRITICAL__ alert:": "modulen din utløste den følgende __CRITICAL__-aleren",
-    "your module triggered the folllowing alert:": "modulen din utløste den følgende aleren",
+    "your module triggered the following __CRITICAL__ alert:": "modulen din utløste den følgende __CRITICAL__-aleren",
+    "your module triggered the following alert:": "modulen din utløste den følgende aleren",
     "with the value of": "med verdien av",
     "You may need to intervene": "Du må kanskje gripe inn",
     "You may need to intervene urgently": "Du må kanskje gripe inn raskt",
