--- a/resources/lang/el.json
+++ b/resources/lang/el.json
@@ -127,8 +127,8 @@
     "The": "Ο",
     "the": "ο",
     "the portal has detected that it has not received data from your module since": "η πύλη έχει εντοπίσει ότι δεν έχει λάβει δεδομένα από τη μονάδα σας από τότε",
-    "your module triggered the folllowing __CRITICAL__ alert:": "η ενότητα σας ενεργοποίησε το ακόλουθο __CRITICAL__ aler",
-    "your module triggered the folllowing alert:": "η μονάδα σας ενεργοποίησε το ακόλουθο aler",
+    "your module triggered the following __CRITICAL__ alert:": "η ενότητα σας ενεργοποίησε το ακόλουθο __CRITICAL__ aler",
+    "your module triggered the following alert:": "η μονάδα σας ενεργοποίησε το ακόλουθο aler",
     "with the value of": "με την τιμή του",
     "You may need to intervene": "Ίσως χρειαστεί να παρέμβετε",
     "You may need to intervene urgently": "Ίσως χρειαστεί να παρέμβετε επειγόντως",
