--- a/resources/lang/el.json
+++ b/resources/lang/el.json
@@ -64,7 +64,7 @@
     "Activate notifications (keep this tab open)": "Ενεργοποίηση ειδοποιήσεων (διατηρήστε αυτήν την καρτέλα ανοιχτή)",
     "Add a subscription": "Προσθέστε μια συνδρομή",
     "Change the logo of": "Αλλάξτε το λογότυπο του",
-    "Comment": "Σχόλιο",
+    "Commentary": "Σχόλιο",
     "Comment on the alert": "Σχολιάστε την ειδοποίηση",
     "Created the": "Δημιουργήθηκε το",
     "Current colors": "Τρέχοντα χρώματα",
