--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -60,13 +60,8 @@
 "Actions": "Comportamiento",
 "Active": "Activo",
 "Actual logo": "logotipo real",
-"Activate mails": "Activar electrónico",
-"Activate notifications (keep this tab open)": "Activar la notificación (mantener esta pestaña abierta)",
-"Add a subscription": "Añadir una suscripción",
-"Change the language": "Cambia el idioma",
-"Change the logo of": "Cambiar el logotipo de",
-"Comment": "¿Cómo? 'O' ¿Qué",
-"Comment on the alert": "Como en la alarma",
+"Commentary": "Commento",
+"Comment on the alert": "Commento en la alarma",
 "Created the": "Creado té",
 "Current colors": "colores actuales",
 "during": "durante",
@@ -76,7 +71,7 @@
 "Failed to post your comment.": "No se ha podido enviar su comentario .",
 "Finished": "Terminado",
 "First occurence the": "En primer lugar la ocurrencia",
-"ID": "CARNÉ DE IDENTIDAD",
+"ID": "ID",
 "invoice": "factura",
 "Last alerts": "Últimas alertas",
 "Last log": "Ultimo registro",
@@ -86,7 +81,7 @@
 "Modify": "Modificar",
 "Modify the colors": "Modificar los colores",
 "Number": "Número",
-"Module": "MóduloModule",
+"Module": "Módulo",
 "Notification buttons": "botones de notificación",
 "Occurences": "Ocurrencias",
 "Ongoing since the": "En curso desde el",
