--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -66,7 +66,7 @@
 "Add a subscription": "Aggiungere un abbonamento",
 "Change the language": "Cambia la lingua",
 "Change the logo of": "Cambiare il logo di",
-"Comment": "Commento",
+"Commentary": "Commento",
 "Comment on the alert": "Commento in allerta",
 "Created the": "creato il",
 "Current colors": "colori correnti",
