--- a/resources/lang/nn.json
+++ b/resources/lang/nn.json
@@ -64,7 +64,7 @@
     "Activate notifications (keep this tab open)": "Aktiver varsler (hold denne fanen åpen)",
     "Add a subscription": "Legg til et abonnement",
     "Change the logo of": "Endre logoen til",
-    "Comment": "Kommentar",
+    "Commentary": "Kommentar",
     "Comment on the alert": "Kommenter varselet",
     "Created the": "Laget den",
     "Current colors": "Nåværende farger",
