--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -66,7 +66,7 @@
 "Add a subscription": "Ajouter un abonnement",
 "Change the language": "Changer la langue",
 "Change the logo of": "Changer le logo de",
-"Comment": "Commentaire",
+"Commentary": "Commentaire",
 "Comment on the alert": "Commentaire sur l'alerte",
 "Created the": "Créé le",
 "Current colors": "Couleurs actuelles",
