--- a/resources/lang/es_ES.json
+++ b/resources/lang/es_ES.json
@@ -16,6 +16,16 @@
 "You are taking control of another company. Click here to return to yours": "Usted está tomando el control de Comentarios otra compañía. Haga clic aquí para volver a la suya",
 "You are </span>disconnected</small>": "Estás </span>desconectado</small>",
 
+"========= Logs =========": "========= Logs =========",
+
+"Acquittal": "Absolución",
+"alarme": "alarma",
+"declenchement": "gatillo",
+"defaut gaz": "falla de gas",
+"defaut pression": "falla de presión",
+"defaut temperature": "falla de temperatura",
+"transformateur": "transformador",
+
 "========= Monitoring =========": "========= Monitoreo =========",
 
 "Battery": "Batería",
@@ -37,14 +47,12 @@
 "Log analysis": "Análisis de registros",
 "Logs": "Registros",
 "Logs color code": "Código de color troncos",
-"Gas fault": "Culpa de gas",
-"Message": "MensajeMessage",
+"Message": "Mensaje",
 "max. battery": "máx. batería",
 "min. temperature": "min. temperatura",
 "Only anomalies": "Sólo anomalías",
 "Only temperatures": "Sólo temperaturas",
 "Other": "Otro",
-"Pressure fault": "Culpa presión",
 "Search": "Buscar",
 "Search by": "Búsqueda por",
 "Search by date": "Buscar por fecha",
@@ -52,7 +60,6 @@
 "Supported languages": "Idiomas compatibles",
 "than": "que",
 "Temperature color code": "Código de color de la temperatura",
-"Temperature fault": "Fallo de temperatura",
 "Temperature graphs": "Gráficos de temperatura",
 "Temperature": "Temperatura",
 "Theme": "Tema",
@@ -112,24 +119,24 @@
 
 "========= Datetime =========": "========= Hora =========",
 ":": ":",
-"at": "a",
+"at": "a las",
 "days": "dias",
 "hours": "horas",
 "minutes": "minutos",
 "months": "meses",
 "seconds": "segundo",
+"The": "El",
+"the": "el",
 
 "========= Mail =========": "========= Correo=========",
 
 "Best regards": "Saludos cordiales",
-"Consult on": "Consultarlo",
+"Consult on": "Consultar en",
 "New alert": "Nueva alerta",
 "New critical alert": "Nueva alerta crítica",
 "for your module": "para su módulo",
-"_Module location_": "location_ _Module",
-"The": "Té",
-"the": "té",
-"the portal has detected that it has not received data from your module since": "portal ha detectado que no ha recibido los datos de su unidad desde entonces",
+"Module location": "Ubicación del módulo",
+"the portal has detected that it has not received any data from your module since": "portal ha detectado que no ha recibido los datos de su unidad desde entonces",
 "your module triggered the following __CRITICAL__ alert:": "su unidad desencadenó la ALER __CRITICAL__ siguientes iniciales",
 "your module triggered the following alert:": "su desencadenado el módulo de ALER siguientes iniciales",
 "with the value of": "con el valor de",
@@ -177,6 +184,19 @@
 "User list": "Lista de usuarios",
 "Users": "Usuarios",
 
+"========= Messages =========": "========= Mensajes =========",
+
+"Authentication failed.": "Falló la autenticación.",
+"No mail was sent because this company does not have a user.": "No se envió ningún correo porque esta empresa no tiene usuario.",
+"Unable to retrieve user's company information.": "No se pudo recuperar la información de la empresa del usuario.",
+"Unauthorized action.": "Acción no autorizada.",
+"Your color choices have been saved.": "Se han guardado sus opciones de color.",
+"You do not have the right to view this email.": "No tiene derecho a ver este correo electrónico.",
+"Your image have been saved.": "Tu imagen se ha guardado.",
+"Your module :module_name has stopped emitting": "Tu módulo :module_name ha dejado de enviarse",
+"Your module :module_name has triggered a :alert alert": "Su módulo :module_name activó una alerta :alert",
+
+"========= Generic =========": "========= Genérico =========",
 "========= Generic =========": "========= Genérico =========",
 
 "A fresh verification link has been sent to your email address.": "Se ha enviado un nuevo enlace de verificación a su correo electrónico.",
