--- a/resources/lang/it_IT.json
+++ b/resources/lang/it_IT.json
@@ -17,6 +17,16 @@
 "You are disconnected": "Sei disconnesso",
 "Disconnected": "Disconnesso",
 
+"========= Logs =========": "========= Logs =========",
+
+"Acquittal": "Assoluzione",
+"alarme": "allarmami",
+"declenchement": "grilletto",
+"defaut gaz": "guasto del gas",
+"defaut pression": "difetto di pressione",
+"defaut temperature": "guasto di temperatura",
+"transformateur": "trasformatore",
+
 "========= Monitoring =========": "========= Monitoraggio =========",
 
 "Battery": "Batteria",
@@ -38,14 +48,12 @@
 "Log analysis": "l'analisi dei log",
 "Logs": "Registri",
 "Logs color code": "codice di colore logs",
-"Gas fault": "colpa del gas",
 "Message": "Messaggio",
 "max. battery": "max. batteria",
 "min. temperature": "min. temperatura",
 "Only anomalies": "solo anomalie",
 "Only temperatures": "solo temperatura",
 "Other": "Altro",
-"Pressure fault": "guasto pressione",
 "Search": "Cercato",
 "Search by": "Cercato da",
 "Search by date": "Ricerca per data",
@@ -53,7 +61,6 @@
 "Supported languages": "Lingue supportate",
 "than": "di",
 "Temperature color code": "Codice di colore di temperatura",
-"Temperature fault": "Difetto di temperatura",
 "Temperature graphs": "I grafici di temperatura",
 "Temperature": "Temperatura",
 "Theme": "Tema",
@@ -119,29 +126,32 @@
 "========= Datetime =========": "========= Datetime =========",
 
 ":": ":",
-"at": "a",
+"at": "alle",
 "days": "giorni",
 "hours": "ore",
 "minutes": "minuti",
 "months": "mesi",
 "seconds": "secondi",
+"The": "Lo",
+"the": "Lo",
 
 "========= Mail =========": "========= Posta =========",
 
+"Alert": "Mettere in guardia",
 "Best regards": "I migliori saluti",
 "Consult on": "consultare su",
 "New alert": "Nuovo allarme",
 "New critical alert": "Nuovo avviso critico",
 "for your module": "per il modulo",
-"_Module location_": "_Posizione del modulo_",
-"The": "Il",
-"the": "il",
-"the portal has detected that it has not received data from your module since": "il portale ha rilevato che essa non ha ricevuto i dati dal modulo dal",
+"Module location": "Posizione del modulo",
+"the portal has detected that it has not received any data from your module since": "il portale ha rilevato che essa non ha ricevuto i dati dal modulo dal",
 "your module triggered the following __CRITICAL__ alert:": "il modulo ha attivato il seguente __AVVISO__ critico:",
 "your module triggered the following alert:": "il modulo ha attivato il seguente critico:",
 "with the value of": "con il valore di",
 "You may need to intervene": "Potrebbe essere necessario intervenire",
 "You may need to intervene urgently": "Potrebbe essere necessario intervenire con urgenza",
+"Your module :module_name has stopped emitting": "Il tuo modulo :module_name ha smesso di inviare",
+"Your module :module_name has triggered a :alert alert": "Il tuo modulo :module_name ha attivato un avviso :alert",
 
 "========= Access =========": "========= Accesso =========",
 
@@ -184,6 +194,17 @@
 "User list": "Lista degli utenti",
 "Users": "Utenti",
 
+"========= Messages =========": "========= Messages =========",
+
+"Authentication failed.": "Autenticazione fallita.",
+"No mail was sent because this company does not have a user.": "Non è stata inviata alcuna mail perché questa azienda non ha un utente.",
+"Unable to retrieve user's company information.": "Impossibile recuperare le informazioni sulla società dell'utente.",
+"Unauthorized action.": "Azione non autorizzata.",
+"Your color choices have been saved.": "Le tue scelte di colore sono state salvate.",
+"You do not have the right to view this email.": "Non hai il diritto di visualizzare questa email.",
+"Your image have been saved.": "La tua immagine è stata salvata.",
+
+"========= Generic =========": "========= Generica =========",
 "========= Generic =========": "========= Generica =========",
 
 "A fresh verification link has been sent to your email address.": "Un nuovo link di verifica è stato inviato al tuo indirizzo email.",
